# cloudai-gcp-test-resource-reaper

./: .gitignore  BUILD  README.md  WORKSPACE  go.mod  go.sum
.bazelci/: presubmit.yml
client/: BUILD.bazel  client.go  client_test.go
cmd/reaper/: BUILD.bazel  main.go
cmd/start/: main.go
cmd/start_client/: main.go
cmd/start_server/: BUILD.bazel  logs.txt  main.go
pkg/: BUILD.bazel  main.go
pkg/clients/: BUILD.bazel  clients.go  gce.go  gce_test.go
pkg/clients/gce/: BUILD.bazel  gce_client.go  gce_test.go
pkg/clients/gcs/: BUILD.bazel  gcs.go  gcs_client.go  gcs_test.go
pkg/integration_tests/: BUILD.bazel  reaper_integration_test.go  reaper_manager_integration_test.go  test_utils.go
pkg/logger/: BUILD.bazel  logger.go
pkg/manager/: BUILD.bazel  manager_server.go  manager_server_test.go  reaper_manager.go  reaper_manager_test.go
pkg/reaper/: BUILD.bazel  config.json  integration_test.go  reaper.go  reaper_example_test.go  reaper_test.go
pkg/resources/: BUILD.bazel  resources.go  resources_test.go
pkg/utils/: BUILD.bazel  test_utils.go
proto/: BUILD.bazel  reaperconfig.proto
reaperconfig/: BUILD.bazel  reaperconfigs.pb.go
