load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/client",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/manager:go_default_library",
        "//pkg/utils:go_default_library",
    ],
)
