load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/pkg",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/manager:go_default_library",
        "//pkg/reaper:go_default_library",
    ],
)

go_binary(
    name = "pkg",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
