load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/cmd/reaper",
    visibility = ["//visibility:private"],
    deps = [
        "//client:go_default_library",
        "//pkg/reaper:go_default_library",
        "//proto:go_default_library",
    ],
)

go_binary(
    name = "reaper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
