load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/cmd/start_server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/logger:go_default_library",
        "//pkg/manager:go_default_library",
    ],
)

go_binary(
    name = "start_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
