load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/pkg/logger",
    visibility = ["//visibility:public"],
    deps = ["@com_google_cloud_go_logging//:go_default_library"],
)
