load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["reaper_manager.go"],
    importpath = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/pkg/manager",
    visibility = ["//visibility:public"],
    deps = ["//pkg/reaper:go_default_library"],
)
