load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["resources.go"],
    importpath = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/pkg/resources",
    visibility = ["//visibility:public"],
    deps = ["//proto:go_default_library"],
)
